data/issues_nolabel/nolabel_test_5792.txt
I am having a problem when adding new op in tensorflow

I just followed the tutorial when trying to add a new op in tensorflow
I would like to add a new op with which the file name is: rec_conv.cc
The code is like:(Input an tensor and just output a string)
#include "tensorflow/core/framework/op.h"
#include "tensorflow/core/framework/shape_inference.h"
#include "tensorflow/core/framework/op_kernel.h"
using namespace tensorflow;
	
REGISTER_OP("RecConv")
    .Input("input: int32")
    .Output("output: string")
    .SetShapeFn([](::tensorflow::shape_inference::InferenceContext* c) {
      c->set_output(0, c->input(0));
      return Status::OK();
    });

class RecConvOp: public OpKernel{
 public:
	explicit RecConvOp(OpKernelConstruction* context): OpKernel(context){}

 void Compute(OpKernelContext* context) override {
	//const Tensor& input_tensor = context->input(0);
	Tensor* output_tensor = NULL;
	auto output = output_tensor->template scalar<string>();
	output() = "Output is Rec_conv layer";
 }
}
REGISTER_KERNEL_BUILDER(Name("RecConv").Device(DEVICE_CPU), RecConvOp);


The BUILD file is like:
load("//tensorflow:tensorflow.bzl", "tf_custom_op_library")

tf_custom_op_library(
    name = "rec_conv.so",
    srcs = ["rec_conv.cc"],
)


However, when I run:
bazel build -c opt //tensorflow/core/user_ops:rec_conv.so
Error occure like:
Server finished RPC without an explicit exit code

lixinyu@lixinyu-PC:~/tensorflow/tensorflow/tensorflow/core/user_ops$ bazel build -c opt //tensorflow/core/user_ops:rec_conv.so
...........
INFO: Found 1 target...
ERROR: /home/lixinyu/tensorflow/tensorflow/tensorflow/core/user_ops/BUILD:3:1: C++ compilation of rule '//tensorflow/core/user_ops:rec_conv.so' failed: gcc failed: error executing command /usr/bin/gcc -U_FORTIFY_SOURCE '-D_FORTIFY_SOURCE=1' -fstack-protector -Wall -Wl,-z,-relro,-z,now -B/usr/bin -B/usr/bin -Wunused-but-set-parameter -Wno-free-nonheap-object -fno-canonical-system-headers ... (remaining 57 argument(s) skipped): com.google.devtools.build.lib.shell.BadExitStatusException: Process exited with status 1.
In file included from tensorflow/core/user_ops/rec_conv.cc:3:0:
./tensorflow/core/framework/op_kernel.h:1097:7: error: expected initializer before 'registrar__body__1__object'
       registrar__body__##ctr##__object(                                 \
       ^
./tensorflow/core/framework/op_kernel.h:1093:3: note: in expansion of macro 'REGISTER_KERNEL_BUILDER_UNIQ'
   REGISTER_KERNEL_BUILDER_UNIQ(ctr, kernel_builder, __VA_ARGS__)
   ^
./tensorflow/core/framework/op_kernel.h:1090:3: note: in expansion of macro 'REGISTER_KERNEL_BUILDER_UNIQ_HELPER'
   REGISTER_KERNEL_BUILDER_UNIQ_HELPER(__COUNTER__, kernel_builder, __VA_ARGS__)
   ^
tensorflow/core/user_ops/rec_conv.cc:32:1: note: in expansion of macro 'REGISTER_KERNEL_BUILDER'
 REGISTER_KERNEL_BUILDER(Name("RecConv").Device(DEVICE_CPU), RecConvOp);
 ^
./tensorflow/core/framework/op_kernel.h:1104:30: error: expected unqualified-id before ')' token
                             });
                              ^
./tensorflow/core/framework/op_kernel.h:1093:3: note: in expansion of macro 'REGISTER_KERNEL_BUILDER_UNIQ'
   REGISTER_KERNEL_BUILDER_UNIQ(ctr, kernel_builder, __VA_ARGS__)
   ^
./tensorflow/core/framework/op_kernel.h:1090:3: note: in expansion of macro 'REGISTER_KERNEL_BUILDER_UNIQ_HELPER'
   REGISTER_KERNEL_BUILDER_UNIQ_HELPER(__COUNTER__, kernel_builder, __VA_ARGS__)
   ^
tensorflow/core/user_ops/rec_conv.cc:32:1: note: in expansion of macro 'REGISTER_KERNEL_BUILDER'
 REGISTER_KERNEL_BUILDER(Name("RecConv").Device(DEVICE_CPU), RecConvOp);
 ^
Target //tensorflow/core/user_ops:rec_conv.so failed to build
Use --verbose_failures to see the command lines of failed build steps.
INFO: Elapsed time: 11.505s, Critical Path: 2.99s
lixinyu@lixinyu-PC:~/tensorflow/tensorflow/tensorflow/core/user_ops$ bazel build -c opt //tensorflow/core/user_ops:rec_conv.so


Could anyone tell me what type of error it is like and how to debug it cuz I am wondering why there are so many warnings and error promped from the included header file
Thanks in advance